# task_dispenser

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ghcr.yml
docs/source/: advanced_usage.rst  api.rst  conf.py  development.rst  index.rst  installation.rst  user_guide.rst  version_history.rst
examples/: celery_task.py  simple_task.py
scripts/: docker_start.sh  test.sh
task_dispenser/: __init__.py  client.py  dispenser.py  main.py  utils.py
tests/: autoreload.sh  conftest.py  test_main.py  test_utils.py
